# json-schema-utils

./: .gitignore  BACKLOG.md  CONVERT.md  JSTS.md  Makefile  README.md  jsts_status.sh  pyproject.toml
jsutils/: __init__.py  convert.py  inline.py  recurse.py  resolver.py  restruct.py  schemas.py  scripts.py  simplify.py  stats.py  types.py  utils.py  vocab.py
tests/: Makefile  README.md  any_array_object.inline.json  any_array_object.schema.json  any_array_object.simpler.json  any_array_object.stats.json  array_00.inline.json  array_00.ok-0.value.json  array_00.schema.json  array_00.stats.json  author.0.true.json  author.1.true.json  author.2.true.json  author.3.false.json  author.check0.out  author.check1.out  author.check2.out  author.inline.json  author.model.json  author.schema.json  author.simpler.json  author.stats.json  bool_00.inline.json  bool_00.schema.json  bool_00.stats.json  cond_00.schema.json  cond_00.simpler.json  cond_00.stats.json  cond_01.pretty.json  cond_01.schema.json  cond_01.simpler.json  cond_01.stats.json  cond_02.schema.json  cond_02.simpler.json  cond_02.stats.json  cond_03.inline.json  cond_03.schema.json  cond_03.simpler.json  cond_03.stats.json  const.json  (+158 more)
tests/s2m/: Makefile  README.md  ansible-meta.model.json  aws-cdk.model.json  babelrc.model.json  clang-format.model.json  cmake-resets.model.json  code-climate.model.json  contains_and_items.model.json  contains_and_items.schema.json  cql2.model.json  cspell.model.json  cypress.model.json  def_order.model.json  def_order.schema.json  deno.model.json  dependabot.model.json  draft-04.model.json  fabric-mod.model.json  geojson.model.json  gitpod-configuration.model.json  helm-chart-lock.model.json  ifexclude.model.json  ifexclude.schema.json  ifthenelse.model.json  ifthenelse.schema.json  importmap.model.json  jasmine.model.json  jsconfig.model.json  jshintrc.model.json  json-model.model.json  krakend.model.json  lazygit.model.json  lerna.model.json  multi-enum-0.model.json  multi-enum-0.schema.json  multi-enum-1.model.json  multi-enum-1.schema.json  nest-cli.model.json  not_00.model.json  (+62 more)
