[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jsutils"]
exclude = ["tests*"]

[project]
name = "json_schema_utils"
version = "0.9.0"
authors = [ { name = "Fabien Coelho" }, { name = "Claire Yannou-Medrala" } ]
description = "JSON Schema Utils"
readme = "README.md"
requires-python = ">=3.12"
license = "CC0-1.0"
classifiers = [ "Topic :: Software Development" ]
dependencies = [ "requests", "jschon", "jsonschema[format]", "json-model-compiler" ]

[project.optional-dependencies]
dev = [ "ruff", "flake8", "pyright" ]
dist = [ "build", "twine", "wheel" ]

[project.scripts]
jsu-inline = "jsutils:jsu_inline"
jsu-simpler = "jsutils:jsu_simpler"
jsu-check = "jsutils:jsu_check"
jsu-stats = "jsutils:jsu_stats"
jsu-pretty = "jsutils:jsu_pretty"
jsu-model = "jsutils:jsu_model"
jsu-compile = "jsutils:jsu_compile"
jsu-test-runner = "jsutils:jsu_runner"

[project.urls]
repository = "https://github.com/zx80/json-schema-utils"
